--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For You, My Love, My Shanshi ❤️</title>
+<title>For You, My Love ❤️</title>
 
 <style>
 
@@ -167,7 +167,7 @@ Come to me.
 
 I’ll listen.
 I’ll understand.
-Tum samajhte ho na, I’m always on your side.
+Ap maante ho na, I’m always on your side.
 
 Even when I’m not physically there,
 my heart is holding yours.
@@ -175,13 +175,13 @@ Cheering for you.
 Praying for you.
 Missing you a little extra.
 
-I’m always waiting for you, my love.
+I’m always waiting for you, my luv.
 With open arms.
 With soft thoughts.
 With so much love. 💗
 
 Always yours,
-Your girl 💕`
+Your Penguin 💕`
 },
 
 /* ==================== WHY I MADE THIS ==================== */
@@ -194,19 +194,16 @@ because some days are really hard.
 Because sometimes you smile outside
 but inside you’re tired, quiet, or hurting.
 
-I made this because distance hurts, jaan.
+I made this because distance hurts, baby.
 Because not being able to hold your hand,
 not hearing your voice whenever I want,
 not seeing you when I miss you…
 it breaks my heart a little every day.
 
-And still, I stay strong.
-For you.
-For us.
-
 I made this because you matter to me.
 More than you probably realize.
 More than I know how to explain in words.
+THE MOST!!!
 
 I wanted you to have a place
 where you always feel safe,
@@ -225,8 +222,8 @@ My way of holding you from far away.
 My way of whispering,
 “I’m here. I’m yours. And I’m not going anywhere.”
 
-I love you,
-always. 💗`
+I love you, luv
+ALWAYS. 💗`
 },
 
 /* ==================== WHEN YOU ARE TIRED ==================== */
@@ -242,16 +239,12 @@ you carry silently on your shoulders.
 Sometimes you don’t complain.
 Sometimes you just say, “I’m fine,”
 even when you’re exhausted inside.
-Tum samajhte ho na… I notice that.
+You know this… I notice that.
 
-You don’t have to be strong every day, jaan.
+You don’t have to be strong every day, my pyara balak.
 You don’t have to prove anything to anyone.
 Not to the world.
 Not even to me.
-
-With me, you’re allowed to be tired.
-You’re allowed to be weak.
-You’re allowed to rest.
 
 So please…
 Rest when your body asks you to.
@@ -321,7 +314,7 @@ Your girl 💕`
 /* ==================== WHEN YOU CAN'T SLEEP ==================== */
 {
 title:"When You Can’t Sleep 🌙",
-text:`My sleepy love,
+text:`My Pwetty Panda Ji,
 
 If you’re awake right now,
 staring at the ceiling,
@@ -333,7 +326,7 @@ even when your body is tired.
 Sometimes worries, memories, and “what ifs”
 keep coming quietly.
 
-It’s okay, jaan.
+It’s okay, baby.
 It’s okay to stop thinking for a while.
 It’s okay to let everything go… just for tonight.
 
@@ -361,13 +354,13 @@ Sleep peacefully. 💗
 I’ll be in your dreams. 💫
 
 Always yours,
-Your girl 💕`
+Your baby 💕`
 },
 
 /* ==================== WHEN YOU'RE ANGRY ==================== */
 {
 title:"When You’re Angry 💢",
-text:`My love,
+text:`My 2 yr old balak,
 
 I know life hurts sometimes.
 I know people disappoint you.
@@ -394,7 +387,8 @@ Don’t let it take away
 your kindness, your patience, your beautiful soul.
 
 That softness is what makes you you.
-That’s what I fell in love with. 💗
+That’s what I fell in love with.
+Soft spoken and responsible balak💗.
 
 No matter what happened,
 no matter who hurt you,
@@ -409,13 +403,13 @@ Through every mood,
 Every storm,
 Every silence.
 
-Your girl 💕`
+Your Manshi 💕`
 },
 
 /* ==================== WHEN YOU FEEL LONELY ==================== */
 {
 title:"When You Feel Lonely 🌧️",
-text:`My love,
+text:`My Nakhre Wali Pretty Princess,
 
 If you’re feeling lonely right now,
 even when people are around you…
@@ -429,7 +423,7 @@ But inside, you feel empty.
 Disconnected.
 Unseen.
 
-Jaan, listen to me…
+Baby, listen to me…
 You are never alone.
 Not today.
 Not on your worst days.
@@ -467,7 +461,7 @@ Your girl 💕`
 /* ==================== WHEN I CAN'T REPLY ==================== */
 {
 title:"When I Can’t Answer 📱",
-text:`My love,
+text:`My pyaale balak,
 
 If someday I don’t reply fast,
 if my messages come late,
@@ -499,19 +493,20 @@ my heart knows only one place.
 You. 💗
 
 Always yours,
-Your girl 💕`
+Your Princess 💕`
 },
 
 /* ==================== WHEN I HURT YOU ==================== */
 {
 title:"When I Hurt You 💔",
-text:`My love,
+text:`My Pretty Princess,
 
 If I ever hurt you…
 with my words,
 with my silence,
 with my mood,
-or with my mistakes…
+with my mistakes, 
+or with my mood swings…
 I’m truly sorry, jaan.
 
 I never want to be the reason
@@ -549,13 +544,13 @@ You are my person.
 
 Always trying to be better,
 For you,
-Your girl 💕`
+Yours Forever 💕`
 },
 
 /* ==================== WHEN WE FIGHT ==================== */
 {
 title:"When We Fight 💢",
-text:`My love,
+text:`My Life Support System,
 
 If we ever fight…
 if voices get quiet,
@@ -607,7 +602,7 @@ Your girl 💕`
 /* ==================== WHEN YOU FEEL IGNORED ==================== */
 {
 title:"When You Feel Ignored 👀",
-text:`My love,
+text:`My Nadaan Panda,
 
 If you ever feel unseen…
 if you feel like I’m distracted,
@@ -644,7 +639,7 @@ Always. 💖
 You’re important to me.
 More than you know.
 
-Your girl 💕`
+Your GURRL 💕`
 },
 
 /* ==================== WHEN YOU DOUBT MY LOVE ==================== */
