--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Allura&display=display&family=Allura&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>For You, My Love ❤️</title>
 
@@ -69,6 +72,7 @@ button{
 
     /* Button text color */
     color:white;
+font-family: italic;
 
     font-weight:bold;
 }
@@ -101,11 +105,11 @@ main{
 
     box-shadow:0 5px 25px rgba(0,0,0,.1);
 
-    line-height:1.9;
-    font-size:1.1em;
-
+    line-height:1.3;
+    font-size:1.7em;
+    font-family: 'Allura', cursive;
     /* Letter text color */
-    color:#5A4A42;   /* Change letter text color here */
+    color:#ed3fb3;   /* Change letter text color here */
 }
 
 
@@ -145,7 +149,7 @@ let letters = [
 
 /* ==================== WELCOME ==================== */
 {
-title:"Welcome 💖",
+title:"Hello Hello 💖",
 text:`Hi my love,
 
 If you’re here right now,
@@ -179,6 +183,7 @@ I’m always waiting for you, my luv.
 With open arms.
 With soft thoughts.
 With so much love. 💗
+Rawrrrr💕💕💕💕💕
 
 Always yours,
 Your Penguin 💕`
@@ -187,7 +192,7 @@ Your Penguin 💕`
 /* ==================== WHY I MADE THIS ==================== */
 {
 title:"Why I Made This 💌",
-text:`My love,
+text:`My LUV,
 
 I made this for you
 because some days are really hard.
@@ -229,7 +234,7 @@ ALWAYS. 💗`
 /* ==================== WHEN YOU ARE TIRED ==================== */
 {
 title:"When You Are Tired 😴",
-text:`My love,
+text:`My Heart,
 
 I see you.
 I see how hard you try every single day.
@@ -270,7 +275,7 @@ Always. 💕`
 /* ==================== WHEN YOU MISS ME ==================== */
 {
 title:"When You Miss Me 💭",
-text:`My love,
+text:`My Baby,
 
 If you’re missing me right now,
 maybe it’s late.
@@ -461,7 +466,7 @@ Your girl 💕`
 /* ==================== WHEN I CAN'T REPLY ==================== */
 {
 title:"When I Can’t Answer 📱",
-text:`My pyaale balak,
+text:`My Pyaale Balak,
 
 If someday I don’t reply fast,
 if my messages come late,
