--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@ body{
     margin:0;
     font-family:Georgia,serif;
 
-    /* Change page background gradient here */
-    background:linear-gradient(135deg,#fff4e6,#ffb3ba,#e0bbe4);
+    background:#dd2d4a;
 
     min-height:100vh;
 }
