--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@ header{
 
 /* Main title: "For You, My Love" */
 h1{
-    color:#ff4d6d;   /* Change heading color here */
+    color:white;
 }
 
-/* Subtitle under heading */
 .subtitle{
-    color:#c70039;  /* Change subtitle color here */
-    font-style:italic;
+    color:white;
 }
+
 
 
 /* =========================
@@ -134,7 +133,7 @@ main{
 <body>
 
 <header>
-<h1>💕 For You, My LUV, My Shanshi 💕</h1>
+<h1>💌 For You, My LUV, My Shanshi 💌</h1>
 <p class="subtitle">Distance means nothing when you mean everything</p>
 </header>
 
