--- a/index.html
+++ b/index.html
@@ -39,11 +39,16 @@ header{
 /* Main title: "For You, My Love" */
 h1{
     color:white;
+    font-family: 'Dancing Script', cursive;
+    font-size:2.5em;   /* optional, makes it more elegant */
 }
 
 .subtitle{
     color:white;
+    font-family: 'Allura', cursive;
+    font-size:1.6em;   /* optional */
 }
+
 
 
 
@@ -65,21 +70,16 @@ button{
     padding:10px 18px;
     cursor:pointer;
 
-    /* Button background */
-    background:linear-gradient(135deg,#ffb3ba,#e0bbe4);
+    background:#ffadad;
 
-    /* Button text color */
     color:white;
-font-family: italic;
-
     font-weight:bold;
 }
 
+
 /* Active (selected) button */
 button.active{
-
-    /* Active button background */
-    background:linear-gradient(135deg,#b4d4ff,#e0bbe4);
+    background:#ff8fa3;  /* slightly darker pink for selected tab */
 }
 
 
