--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ button{
     cursor:pointer;
 
     background:#ffadad;
-
+       font-family: 'Dancing Script', cursive;
     color:white;
     font-weight:bold;
 }
