--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Allura&display=display&family=Allura&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 <title>For You, My Love ❤️</title>
 
 <style>
@@ -71,9 +74,10 @@ button{
     cursor:pointer;
 
     background:#ffadad;
-       font-family: 'Dancing Script', cursive;
+       font-family: font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;;
     color:white;
-    font-weight:bold;
 }
 
 
