--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ button{
     cursor:pointer;
 
     background:#ffadad;
-       font-family: font-family: "Pacifico", cursive;
+       font-family: "Pacifico", cursive;
   font-weight: 400;
   font-style: normal;;
     color:white;
