--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ button{
        font-family: "Pacifico", cursive;
   font-weight: 400;
   font-style: normal;;
+    letter-spacing:2px;
     color:white;
 }
 
